--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "express-session": "^1.18.1"
+    "express-session": "^1.18.1",
+    "jose": "^5.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
   },
   "type": "module"
-
 }
