--- a/webui/package.json
+++ b/webui/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^12.4.0",
     "core-js": "^3.8.3",
     "preline": "^2.5.1",
+    "universal-cookie": "^7.2.2",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
